--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "megaproject",
+  "name": "EdStudio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "Javascript",
     "backend"
   ],
   "author": "Kapil Gautam",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
